--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.MathematicsGame" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.FifteenTwenty" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:statusBarColor">@android:color/transparent</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
     </style>
 
-    <style name="Theme.MathematicsGame" parent="Base.Theme.MathematicsGame" />
+    <style name="Theme.FifteenTwenty" parent="Base.Theme.FifteenTwenty" />
 </resources>
