--- a/app/src/main/res/drawable/ic_hand_closed_left.xml
+++ b/app/src/main/res/drawable/ic_hand_closed_left.xml
@@ -1,15 +1,26 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="36dp"
-    android:height="36dp"
-    android:viewportWidth="36"
-    android:viewportHeight="36">
+    android:width="128dp"
+    android:height="128dp"
+    android:viewportWidth="128"
+    android:viewportHeight="128">
   <path
-      android:pathData="m4.101,10.913c0.81,-1.187 2.172,-1.967 3.718,-1.967h0.5s5.353,-5.672 5.15,-6.091c1.096,0.591 1.85,1.736 1.85,3.069 0,0 5.509,-3.431 5.247,-3.947 1.043,0.692 1.753,1.969 1.753,3.447v0.522s5.447,-1.625 5.143,-2.095c1.1,0.59 1.857,1.737 1.857,3.073v1.886l6,6.272v2.645l-17.16,14.439c0,0.001 -13.128,-22.164 -14.058,-21.253z"
-      android:fillColor="#ef9645"/>
-  <path
-      android:pathData="m32.195,18.946c-1.474,0 -2.738,-0.831 -3.392,-2.043 -0.678,1.212 -1.958,2.043 -3.446,2.043l-0.076,0c-1.153,0 -2.169,-0.51 -2.889,-1.298 -0.023,-0.024 -0.073,-0.082 -0.073,-0.082 -0.185,-0.212 -0.343,-0.448 -0.481,-0.695 -0.04,-0.072 -0.281,-0.621 -0.342,-0.833 -0.052,-0.173 -0.106,-0.344 -0.134,-0.526 -0.141,0.167 -0.296,0.319 -0.46,0.46 -0.069,0.059 -0.45,0.339 -0.576,0.413 -0.589,0.351 -1.271,0.56 -2.008,0.56l-3.166,0c0.535,0.27 0.999,0.614 1.424,1 1.729,1.568 2.579,4.085 2.579,7.663 -0,0.276 -0.224,0.5 -0.5,0.5s-0.5,-0.224 -0.5,-0.5c-0,-3.962 -1.01,-6.427 -3.24,-7.663 -1.175,-0.651 -2.682,-0.967 -4.571,-0.967 -0.059,0 -0.526,-0.033 -0.526,-0.033 -0.276,0 -0.5,-0.224 -0.5,-0.5s0.224,-0.5 0.5,-0.5l8.501,0c1.657,0 3,-1.343 3,-3s-1.343,-3 -3,-3l-11,0c-0.973,0 -2.288,0.056 -3.218,0.967 -0.325,0.318 -0.604,0.736 -0.803,1.297l-1.659,5.472c-0.156,0.512 -0.73,2.857 -0.626,3.346 -0,7.34 8.7,14.972 19.004,14.972 9.976,0.001 15.302,-8.116 15.302,-18.042l-0,-0.229c-0.01,0.01 -0.021,0.016 -0.031,0.026 -0.881,0.882 -1.799,1.192 -2.845,1.192z"
-      android:fillColor="#ffdc5d"/>
-  <path
-      android:pathData="m32.455,5.946l-0.271,0c-1.583,0 -2.865,1.283 -2.865,2.864l-0,6.272c-0,1.582 1.282,2.864 2.864,2.864l0.272,0c1.582,0 2.864,-1.282 2.864,-2.864l-0,-6.272c-0,-1.581 -1.282,-2.864 -2.864,-2.864zM22.319,14.946c-0,0.891 0.396,1.683 1.014,2.233 0.53,0.472 1.221,0.767 1.986,0.767 1.657,0 3,-1.343 3,-3l-0,-9c-0,-0.816 -0.328,-1.554 -0.857,-2.095 -0.544,-0.557 -1.302,-0.905 -2.143,-0.905 -1.657,0 -3,1.343 -3,3zM18.319,8.946c1.201,0 2.267,0.541 3,1.38l-0,-6.38c-0,-0.758 -0.29,-1.442 -0.753,-1.97 -0.55,-0.627 -1.347,-1.03 -2.247,-1.03 -1.657,0 -3,1.343 -3,3l-0,5zM14.319,4.939c-0,-0.812 -0.326,-1.545 -0.85,-2.085 -0.544,-0.559 -1.301,-0.909 -2.143,-0.909l-0.014,0c-1.653,0.001 -2.993,1.341 -2.993,2.994l-0,4.007l6,0z"
-      android:fillColor="#ffdc5d"/>
+      android:pathData="m22.5,38.7c0.1,-4.5 0,-18 0.8,-22.7 0.8,-4.6 6,-7.6 11.4,-7.9 5.3,-0.3 11.3,1.8 13,8.6 2.1,-6.9 7.3,-8.2 12.4,-7.8 6.2,0.4 12.2,3.5 12.3,10.1 1.7,-3.9 6,-5.6 12.2,-4.1 5,1.2 10.1,4 10.5,12.3 4.5,-3.3 20.7,-2.1 20.3,17.3 -0.1,5.8 1.9,8 1.6,18.1 -1,26.2 -15.1,48 -31.3,53.7 -10.9,3.9 -27.1,7.1 -44.7,-2.7 -19.2,-10.7 -27.9,-33.7 -29.2,-37.5 -3.4,-9.5 -3.8,-18.6 2.8,-27.4 3.1,-4.3 7.9,-10 7.9,-10z"
+      android:fillColor="#ffca28"/>
+  <group>
+    <clip-path
+        android:pathData="m22.5,38.7c0.1,-4.5 -0,-18 0.8,-22.7 0.8,-4.6 6,-7.6 11.4,-7.9 5.3,-0.3 11.3,1.8 13,8.6 2.1,-6.9 7.3,-8.2 12.4,-7.8 6.2,0.4 12.2,3.5 12.3,10.1 1.7,-3.9 6,-5.6 12.2,-4.1 5,1.2 10.1,4 10.5,12.3 4.5,-3.3 20.7,-2.1 20.3,17.3 -0.1,5.8 1.9,8 1.6,18.1 -1,26.2 -15.1,48 -31.3,53.7 -10.9,3.9 -27.1,7.1 -44.7,-2.7 -19.2,-10.7 -27.9,-33.7 -29.2,-37.5 -3.4,-9.5 -3.8,-18.6 2.8,-27.4 3.1,-4.3 7.9,-10 7.9,-10z"/>
+    <path
+        android:pathData="m83.6,114.9c4,-2 29.8,-15.4 30.5,-55.9 0.1,-5.9 -1.8,-9 -1.5,-14.6 0.3,-6.6 -1.2,-12.9 -7.8,-14.9 -2.6,-0.8 -5.6,-1.7 -9.5,0.4 -0.7,0.4 -2.1,1.1 -2.9,1.5 0.8,-8.8 -2.6,-12.3 -8,-13.6 -5.3,-1.2 -9.2,-0.1 -10.6,3.2 -1.8,4.1 -3.2,5 -3.9,5.7 1,-10.6 -2.6,-14.1 -9.4,-14.9 -5.6,-0.6 -10.5,2.2 -11.3,7.6 -0.5,3.4 -2.1,4.2 -2.4,2.7 -1.3,-7.8 -5.3,-10.9 -11.6,-11 -4.4,0 -7.9,2 -9.8,6.5 -1.3,3 -6.1,0.3 -6.1,0.3l5.1,-11.9 40.8,-0.8 48.9,23.4 4.8,12.1 0.4,36.7 -16.4,33.2 -21.5,8.6z"
+        android:fillColor="#faa700"/>
+    <path
+        android:pathData="m36.9,67.4c2.8,0.8 18,6.2 24.5,17.7 2.1,3.7 8.5,4.1 11.6,0.5 8.8,-10.2 18.5,-11.1 27.5,-18.1 5.5,-4.2 11.1,-14.7 9.3,-18.5 -1.2,-2.5 -3,-2.3 -3,-2.3s-3.4,6 -7.7,8c-5.6,2.5 -12.4,-2.1 -12.5,-6.1 -0.1,-2.1 -1.6,-1.6 -2.1,-0.3 -2.5,6.3 -16.3,3.3 -16.7,-2.7 -0.2,-2.7 -2.6,-0.6 -2.3,0.5 1.1,3.9 4.3,14.6 -2.8,15.1 -13.7,1 -20.2,-8.7 -27.2,-9.3 -2.6,-0.2 -5.6,0.2 -8.1,4.6 -1.7,3 -5.4,4.9 -7.4,7.1 -5.5,6.1 -0.6,13.9 6.4,10"
+        android:fillColor="#faa700"/>
+  </group>
+  <group>
+    <clip-path
+        android:pathData="m22.5,38.7c0.1,-4.5 -0,-18 0.8,-22.7 0.8,-4.6 6,-7.6 11.4,-7.9 5.3,-0.3 11.3,1.8 13,8.6 2.1,-6.9 7.3,-8.2 12.4,-7.8 6.2,0.4 12.2,3.5 12.3,10.1 1.7,-3.9 6,-5.6 12.2,-4.1 5,1.2 10.1,4 10.5,12.3 4.5,-3.3 20.7,-2.1 20.3,17.3 -0.1,5.8 1.9,8 1.6,18.1 -1,26.2 -15.1,48 -31.3,53.7 -10.9,3.9 -27.1,7.1 -44.7,-2.7 -19.2,-10.7 -27.9,-33.7 -29.2,-37.5 -3.4,-9.5 -3.8,-18.6 2.8,-27.4 3.1,-4.3 7.9,-10 7.9,-10z"/>
+    <path
+        android:pathData="m6.7,71.5 l17.2,36.8 30.7,14.5s33.4,-1.6 33.8,-1.5c0.4,0 18.4,-17.5 19.3,-18.7s-0.1,-4.4 -2.6,-1.9c-28.4,27.6 -58.5,12.7 -61.9,10.8 -19.3,-10.7 -27.6,-32.9 -29.8,-40.2s-0.1,-15.5 3.1,-20.4c1.1,-1.7 5.7,-6.8 9.6,-10.8 3.9,-4.1 10.4,-3.4 13.5,-2.6 5.4,1.4 8,4.4 18.9,7.5 1.5,0.4 8.1,2.3 6.6,9.7 -1.6,8.2 -9.8,8.2 -11.2,8.2 -1.4,0.1 -6.1,0.1 -11.3,-0.6 -5.3,-0.7 -8.9,-4.7 -9.2,-5.2 -0.4,-0.5 -1,-0.2 -0.8,0.4 1,2.7 2.6,4.7 4.9,6.2 -6.7,9.1 -12.6,9.1 -13.5,9.1 -1,0 -0.7,0.9 -0.2,1 4.4,0.8 9.8,0 16.8,-8.6 2.9,1 6.6,1.4 11.1,1.3 6.5,4.7 12.5,16.7 13.6,23.4 0.1,0.5 1,0.7 1,0 0.7,-6 -4,-18.1 -9.3,-23.8 5,-0.7 8.8,-2.8 10.7,-7.1 2.8,3.8 13.4,6.4 17.5,-0.2 -0,4.7 15.9,14.3 19.6,-3 0.6,-0.9 1.2,-2.2 1.5,-3 3.7,-1.2 4.9,-3.2 5.5,-4s-0.1,-1.7 -0.9,-1 -2,1.2 -3.2,1.6c0.7,-1.2 1.6,-6.3 1.7,-6.8 -0,-0.5 -0.5,-0.9 -0.9,0.1 -1.7,4.6 -4.6,10 -6.7,12.2 -1.1,6.8 -4.3,7.4 -6.5,7.4 -6.6,0 -10.7,-6.7 -7.4,-16.8 3.7,-11.5 9.9,-18.9 10.9,-19.9s-1.8,-0.1 -3.6,1.5c-3.2,2.8 -6,7.5 -8.2,12.5 -2.4,5.5 -3.9,11.3 -3.2,16.4 -5.2,6.1 -13,2.6 -15,-0.9 0.5,-3.2 0.1,-5.7 -0.8,-7.6 -0.3,-5.5 1.5,-11.7 3.2,-17.7 2.8,-9.7 5.2,-14.3 7.6,-15.9 -0.2,-1.4 -5.7,-1.6 -6.3,5.1 -4.4,7.7 -8.4,23.9 -7.5,25.1 -2.1,-1.5 -4.4,-2.1 -5.7,-2.5 -4.8,-1.3 -7.2,-2.4 -10.1,-3.7 -0.1,-4.5 -0.6,-22.2 2,-26.9 0.9,-1.6 -3.3,-0.8 -3.5,5.6 -1.5,5.4 -2,16.4 -2.1,19.7 -0.9,-0.4 -2,-0.8 -3.2,-1.3 -7.2,-2.5 -12.9,-1 -16.4,1 -0.4,-13 -0.9,-21.3 1.5,-26.2 -0,0 -0.4,-2.2 -1.8,-0.9s-4,6.2 -4,6.5c-0,0.2 -2.2,17.7 -2.3,23.2 -3.9,3.4 -12.1,11.8 -12.1,11.8z"
+        android:fillColor="#b55e19"/>
+  </group>
 </vector>
