--- a/app/src/main/res/drawable/ic_hand_opened_left.xml
+++ b/app/src/main/res/drawable/ic_hand_opened_left.xml
@@ -1,12 +1,47 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="36dp"
-    android:height="36dp"
-    android:viewportWidth="36"
-    android:viewportHeight="36">
+    android:width="128dp"
+    android:height="128dp"
+    android:viewportWidth="128"
+    android:viewportHeight="128">
   <path
-      android:pathData="m4.725,16.219c1.381,-0.611 3.354,0.208 4.75,2.188 0.917,1.3 1.187,3.151 2.391,3.344 0.46,0.074 0.71,-0.206 0.84,-0.609 0.137,-0.68 0.107,-1.731 -0.147,-3.201l-2.74,-12.315c-0.218,-0.941 0.293,-1.852 1.523,-2.149s2.155,0.306 2.374,1.247l2.446,11.166c0.493,2.466 1.407,2.018 1.186,-0.775v-0.001l-0.701,-13.092c-0.057,-1.012 0.721,-1.839 1.871,-1.883s1.979,0.646 2.038,1.657l0.668,13.409c0.143,2.707 1.112,1.687 1.322,-0.274l1.554,-10.848c0.159,-1.023 1.118,-1.73 2.268,-1.546 1.15,0.185 1.845,1.136 1.686,2.159l-1.495,9.914c-0.593,3.785 0.182,4.833 1.458,0.723l1.594,-6.025c0.26,-0.967 1.213,-1.567 2.41,-1.231s1.713,1.299 1.454,2.266l-1.558,5.663c-0.651,4.077 -0.651,5.686 -0.651,8.493s-1.291,11.501 -11.166,11.501 -11.906,-10.031 -12,-10.666c0,0 -0.123,-1.48 -1.156,-2.865 -1.469,-1.969 -2.5,-3.156 -3.125,-3.866 -0.317,-0.359 -0.625,-1.707 0.906,-2.384z"
-      android:fillColor="#ffdc5d"/>
-  <path
-      android:pathData="m12.189,21.741c0.3,-0.122 0.554,-0.436 0.584,-1.119 1.892,0.259 4.451,0.789 6.42,2.715 2.556,2.499 2.992,5.2 2.971,7.007 -0.017,1.457 -0.812,2.147 -1.045,-0.012 -0.293,-2.727 -2.282,-8.143 -8.93,-8.591z"
-      android:fillColor="#ef9645"/>
+      android:pathData="m38.3,75.1c-0.1,0.4 -0.5,0.5 -0.8,0.2 -3.7,-4.5 -13.6,-17 -25,-13.7 -3.6,1 -5.3,5.1 -3.9,8.2 2.3,4.9 14.7,13.2 21.1,24 1,1.7 9.6,21.6 24.1,27.4s39.5,5.1 46.9,-23c3.8,-14.5 1.7,-17.9 5.6,-37.1 0.8,-3.8 3.6,-20 4.1,-24.7 0.7,-6.3 -8.2,-8.5 -10.4,-3.1 -1,2.6 -8.7,27.2 -9,28.2 -0.6,1.9 -3,1.3 -2.9,-0.4 1.7,-19.9 3.8,-38.4 3.5,-44.7s-9.9,-7.3 -11.2,-0.8c-0.8,4.4 -5.8,39.2 -6,40.7s-2.6,1.3 -2.8,-0.3 -2,-38.8 -3.2,-46.8c-1.1,-7 -12.4,-6.9 -12.6,1.1 -0.2,6.4 0.9,45.7 1,47 0.1,2 -2.2,2.2 -2.5,0.1 -0.2,-1.4 -8.1,-36.8 -9.2,-40.3 -1.8,-6.1 -12.1,-5.7 -11.8,2.5 0.6,11.3 7.1,42.2 5,55.5z"
+      android:fillColor="#ffca28"/>
+  <group>
+    <clip-path
+        android:pathData="m38.3,75.1c-0.1,0.4 -0.5,0.5 -0.8,0.2 -3.7,-4.5 -13.6,-17 -25,-13.7 -3.6,1 -5.3,5.1 -3.9,8.2 2.3,4.9 14.7,13.2 21.1,24 1,1.7 9.6,21.6 24.1,27.4s39.5,5.1 46.9,-23c3.8,-14.5 1.7,-17.9 5.6,-37.1 0.8,-3.8 3.6,-20 4.1,-24.7 0.7,-6.3 -8.2,-8.5 -10.4,-3.1 -1,2.6 -8.7,27.2 -9,28.2 -0.6,1.9 -3,1.3 -2.9,-0.4 1.7,-19.9 3.8,-38.4 3.5,-44.7s-9.9,-7.3 -11.2,-0.8c-0.8,4.4 -5.8,39.2 -6,40.7s-2.6,1.3 -2.8,-0.3 -2,-38.8 -3.2,-46.8c-1.1,-7 -12.4,-6.9 -12.6,1.1 -0.2,6.4 0.9,45.7 1,47 0.1,2 -2.2,2.2 -2.5,0.1 -0.2,-1.4 -8.1,-36.8 -9.2,-40.3 -1.8,-6.1 -12.1,-5.7 -11.8,2.5 0.6,11.3 7.1,42.2 5,55.5z"/>
+    <path
+        android:pathData="m40.2,74c16.9,1.9 30.1,11.7 29.5,30.9 -0,1.6 -2.4,1.6 -2.5,-0.1 -0.5,-9.1 -5.5,-23 -26.6,-27.3 -1.1,1.7 -3.8,1.3 -4.8,0.1 -6.4,-7.8 -11.8,-14.1 -20.7,-14.1 -3.4,0 -5.9,3.1 -3.7,6.9 -0,0 -1.8,1.4 -2.6,2 -1.6,-1.6 -4.8,-4.4 -4.8,-4.5s7.9,-10.8 7.9,-10.8l15.2,3.4z"
+        android:fillColor="#faa700"/>
+    <path
+        android:pathData="m55.8,58.9c-1.6,0.2 -3.3,-0.1 -3.7,-1.8s-7.8,-35.2 -8.4,-37.7c-1.2,-4.6 -6.2,-5.5 -8.1,-2.5 -1.1,1.7 -3.3,-0.3 -2.8,-1.2s1.4,-3.8 6.4,-4.3c8.9,-0.9 9.8,9.2 10.8,14.8 1,5.5 5.8,32.7 5.8,32.7z"
+        android:fillColor="#faa700"/>
+    <path
+        android:pathData="m73.1,57.3c-2.2,-0.2 -4,-0.3 -4,-3.3 -0,-2 -2.5,-39.2 -2.7,-42.8 -0.2,-5.3 -7.1,-5.7 -8.1,-1.7 -0.5,1.8 -3.8,0.6 -3.5,-0.8s1.7,-6 7.4,-6 7.7,3.2 8,4.8 2.9,49.8 2.9,49.8z"
+        android:fillColor="#faa700"/>
+    <path
+        android:pathData="m89.1,62.5c-2.1,-0.9 -3.3,-1.2 -3.1,-4.3 0.2,-3 3.1,-38.3 3.3,-40.3 0.4,-4.9 -5.2,-5.4 -6.3,-3.3s-3.8,-0.1 -2.8,-1.7 2.8,-3.9 5.9,-3.8c3.2,0.2 6.4,2.5 7.2,4.5 0.8,2.1 -4.2,48.9 -4.2,48.9z"
+        android:fillColor="#faa700"/>
+    <path
+        android:pathData="m69.5,122.9c19,-2.4 26.4,-14.7 29,-26.1 2.9,-12.9 2.2,-22.4 4.3,-30.7 0.7,-2.9 5.2,-27 5.2,-30.7 -0,-3 -5.1,-5 -6.7,-1.1 -1,2.4 -3.7,0.4 -2.9,-1.2 0.7,-1.5 2.6,-4.8 7,-4.5s6.9,4.1 7,5.8c-0.1,1.7 -11.7,79.6 -11.7,79.6l-18,10.9 -13.2,0.3z"
+        android:fillColor="#faa700"/>
+  </group>
+  <group>
+    <clip-path
+        android:pathData="m38.3,75.1c-0.1,0.4 -0.5,0.5 -0.8,0.2 -3.7,-4.5 -13.6,-17 -25,-13.7 -3.6,1 -5.3,5.1 -3.9,8.2 2.3,4.9 14.7,13.2 21.1,24 1,1.7 9.6,21.6 24.1,27.4s39.5,5.1 46.9,-23c3.8,-14.5 1.7,-17.9 5.6,-37.1 0.8,-3.8 3.6,-20 4.1,-24.7 0.7,-6.3 -8.2,-8.5 -10.4,-3.1 -1,2.6 -8.7,27.2 -9,28.2 -0.6,1.9 -3,1.3 -2.9,-0.4 1.7,-19.9 3.8,-38.4 3.5,-44.7s-9.9,-7.3 -11.2,-0.8c-0.8,4.4 -5.8,39.2 -6,40.7s-2.6,1.3 -2.8,-0.3 -2,-38.8 -3.2,-46.8c-1.1,-7 -12.4,-6.9 -12.6,1.1 -0.2,6.4 0.9,45.7 1,47 0.1,2 -2.2,2.2 -2.5,0.1 -0.2,-1.4 -8.1,-36.8 -9.2,-40.3 -1.8,-6.1 -12.1,-5.7 -11.8,2.5 0.6,11.3 7.1,42.2 5,55.5z"/>
+    <path
+        android:pathData="m8.2,64.1c0.3,1.5 1,3.8 3.4,6.3 8.8,9.1 16,13 22.2,24.9 11.8,22.8 29.8,34.2 57.8,20.9 2.8,-1.3 3.4,1.1 1.9,1.8 -0.7,0.3 -21.2,8.8 -21.2,8.8s-26.4,-3.7 -26.5,-3.8c-0.1,-0.2 -40.1,-53.1 -40.1,-53.1z"
+        android:fillColor="#b55e19"/>
+    <path
+        android:pathData="m38.3,12.5c-1,0.9 -2.9,3.5 -2.5,8.1s4.6,30.4 4.8,33.3c0.3,3 2.2,16.5 0.5,22.2 -0.5,1.6 -2.5,1.2 -2.9,0 -0.2,-0.6 -0.9,-2.1 -0.9,-2.1l-10,-60.6 7.1,-4.2z"
+        android:fillColor="#b55e19"/>
+    <path
+        android:pathData="m55.8,58.9c2.3,-0.3 3.9,-0.4 3.9,-3.2 -0,-1.9 -0.9,-22.4 -1.1,-46.8 -0,-1.9 1.3,-4.4 3.4,-4.8s1.1,-2.6 -0,-2.5 -7.9,0.5 -7.6,8.5c0.2,8 1.4,48.8 1.4,48.8z"
+        android:fillColor="#b55e19"/>
+    <path
+        android:pathData="m73.1,57.3c1.9,0.1 4.1,0.6 4.5,-2.6 0.4,-3.1 4.7,-36.7 5,-38.7 0.2,-2.1 1.7,-4.6 4.1,-4.6 1.6,0 1.3,-2.9 0.2,-3s-7.4,-1.1 -8.1,3.7c-0.7,4.9 -5.7,45.2 -5.7,45.2z"
+        android:fillColor="#b55e19"/>
+    <path
+        android:pathData="m89.1,62.5c1.9,0.5 3.7,0.4 4.6,-1.9s8,-24.8 8.4,-26.4 2.4,-4.7 6,-3.9c1.4,0.3 1.9,-1.9 0.5,-2.3s-8.6,-2.1 -10.2,3.2 -9.3,31.3 -9.3,31.3z"
+        android:fillColor="#b55e19"/>
+  </group>
 </vector>
