--- a/app/src/main/res/layout/adapter_opponent.xml
+++ b/app/src/main/res/layout/adapter_opponent.xml
@@ -9,4 +9,5 @@
     android:paddingStart="?android:attr/listPreferredItemPaddingStart"
     android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
     android:textAppearance="?android:attr/textAppearanceListItemSmall"
+    android:fontFamily="@font/montserrat"
     tools:text="Opponent" />
