--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -5,6 +5,22 @@
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:navigationBarColor">@android:color/transparent</item>
+
+        <item name="textAppearanceDisplayLarge">@style/TextAppearance.FifteenTwenty.DisplayLarge</item>
+        <item name="textAppearanceDisplayMedium">@style/TextAppearance.FifteenTwenty.DisplayMedium</item>
+        <item name="textAppearanceDisplaySmall">@style/TextAppearance.FifteenTwenty.DisplaySmall</item>
+        <item name="textAppearanceHeadlineLarge">@style/TextAppearance.FifteenTwenty.HeadlineLarge</item>
+        <item name="textAppearanceHeadlineMedium">@style/TextAppearance.FifteenTwenty.HeadlineMedium</item>
+        <item name="textAppearanceHeadlineSmall">@style/TextAppearance.FifteenTwenty.HeadlineSmall</item>
+        <item name="textAppearanceTitleLarge">@style/TextAppearance.FifteenTwenty.TitleLarge</item>
+        <item name="textAppearanceTitleMedium">@style/TextAppearance.FifteenTwenty.TitleMedium</item>
+        <item name="textAppearanceTitleSmall">@style/TextAppearance.FifteenTwenty.TitleSmall</item>
+        <item name="textAppearanceBodyLarge">@style/TextAppearance.FifteenTwenty.BodyLarge</item>
+        <item name="textAppearanceBodyMedium">@style/TextAppearance.FifteenTwenty.BodyMedium</item>
+        <item name="textAppearanceBodySmall">@style/TextAppearance.FifteenTwenty.BodySmall</item>
+        <item name="textAppearanceLabelLarge">@style/TextAppearance.FifteenTwenty.LabelLarge</item>
+        <item name="textAppearanceLabelMedium">@style/TextAppearance.FifteenTwenty.LabelMedium</item>
+        <item name="textAppearanceLabelSmall">@style/TextAppearance.FifteenTwenty.LabelSmall</item>
     </style>
 
     <style name="Theme.FifteenTwenty" parent="Base.Theme.FifteenTwenty">
