--- a/app/src/main/res/layout/fragment_game_choices.xml
+++ b/app/src/main/res/layout/fragment_game_choices.xml
@@ -44,8 +44,9 @@
 
             <com.google.android.material.button.MaterialButtonGroup
                 style="@style/Widget.Material3.MaterialButtonGroup.Connected"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
