--- a/app/src/main/res/layout-land/fragment_records.xml
+++ b/app/src/main/res/layout-land/fragment_records.xml
@@ -12,23 +12,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            style="collapsingToolbarLayoutMediumStyle"
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/fragment_records_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/collapsingToolbarLayoutMediumSize"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
-
-            <com.google.android.material.appbar.MaterialToolbar
-                android:id="@+id/fragment_records_toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:elevation="0dp"
-                app:layout_collapseMode="pin"
-                app:navigationContentDescription="@string/toolbar_navigation_back"
-                app:navigationIcon="@drawable/ic_arrow_back_24px"
-                app:title="@string/fragment_records_title" />
-
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
+            android:layout_height="wrap_content"
+            android:minHeight="?attr/actionBarSize"
+            android:elevation="0dp"
+            app:layout_collapseMode="pin"
+            app:navigationContentDescription="@string/toolbar_navigation_back"
+            app:navigationIcon="@drawable/ic_arrow_back_24px"
+            app:title="@string/fragment_records_title" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
