Refactored to use `RecyclerView`

--- a/app/src/main/res/layout-land/fragment_opponent.xml
+++ b/app/src/main/res/layout-land/fragment_opponent.xml
@@ -25,12 +25,14 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <ListView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/fragment_opponent_list_opponents"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
         android:nestedScrollingEnabled="true"
+        android:scrollbars="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:listitem="@layout/adapter_opponent" />
 
